--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,5 +1,5 @@
-@import 'tailwindcss';
-@import 'tw-animate-css';
+@import "tailwindcss";
+@import "tw-animate-css";
 
 :root {
    /* Color System */
@@ -231,6 +231,7 @@
 }
 
 /* charlee */
+/* service list */
 #btn-search-mobile {
    display: inline-flex;
 }
@@ -247,27 +248,50 @@
       display: inline-flex;
    }
 }
+/* service list */
+/* admin category */
+#changeColor {
+   margin-right: 8px;
+   /* -webkit-appearance: none; */
+   border: none;
+   width: auto;
+   height: auto;
+   cursor: pointer;
+   background: none;
+   &::-webkit-color-swatch-wrapper {
+      padding: 0;
+      width: 60px;
+      height: 30px;
+   }
+   &::-webkit-color-swatch {
+      border: 1px solid #bfc9d9;
+      border-radius: 4px;
+      padding: 0;
+   }
+}
+/* admin category */
+/* charlee */
 
 /* Switch */
 [data-slot="switch"] {
    width: 44px !important;
    height: 24px !important;
    background-color: #e5e7eb !important;
- }
- 
- [data-slot="switch"][data-state="checked"] {
+}
+
+[data-slot="switch"][data-state="checked"] {
    background-color: #2563eb !important;
- }
- 
- [data-slot="switch-thumb"] {
+}
+
+[data-slot="switch-thumb"] {
    display: block !important;
    width: 20px !important;
    height: 20px !important;
    background-color: white !important;
    border-radius: 9999px !important;
    transition: transform 200ms !important;
- }
- 
- [data-slot="switch"][data-state="checked"] [data-slot="switch-thumb"] {
+}
+
+[data-slot="switch"][data-state="checked"] [data-slot="switch-thumb"] {
    transform: translateX(4px) !important;
- }
+}
